force-app/main/default/objects/CoIT_WorkType_BusinessBehaivor__c/CoIT_WorkType_BusinessBehaivor__c.object-meta.xml
<CustomObject>
    <label>Work Type Business Behavior</label>
    <nameField>
        <displayFormat>WTBB-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Type Business Behaviors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>