force-app/main/default/objects/CoIT_WorkType_BusinessBehaivor__c/fields/CoIT_Entitlement_Name__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Entitlement_Name__c</fullName>
    <formula>Entitlement__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitlement Name</label>
    <type>Text</type>
</CustomField>