force-app/main/default/objects/CoIT_WorkType_BusinessBehaivor__c/fields/CoIT_First_SchedulingPolicy_Name__c.field-meta.xml
<CustomField>
    <fullName>CoIT_First_SchedulingPolicy_Name__c</fullName>
    <formula>First_SchedulingPolicy__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Scheduling Policy Name</label>
    <type>Text</type>
</CustomField>