force-app/main/default/objects/CoIT_WorkType_BusinessBehaivor__c/fields/CoIT_Second_SchedulingPolicy_Name__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Second_SchedulingPolicy_Name__c</fullName>
    <formula>Second_SchedulingPolicy__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Second Scheduling Policy Name</label>
    <type>Text</type>
</CustomField>