force-app/main/default/objects/CoIT_WorkType_BusinessBehaivor__c/fields/CoIT_ServiceTerritory_Name__c.field-meta.xml
<CustomField>
    <fullName>CoIT_ServiceTerritory_Name__c</fullName>
    <formula>ServiceTerritory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Territory Name</label>
    <type>Text</type>
</CustomField>