force-app/main/default/objects/CoIT_WorkType_BusinessBehaivor__c/fields/CoIt_Solo_Se_Notifica_al_Base__c.field-meta.xml
<CustomField>
    <fullName>CoIt_Solo_Se_Notifica_al_Base__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solo Se Notifica al Base</label>
    <type>Checkbox</type>
</CustomField>