force-app/main/default/objects/CoIT_WorkType_BusinessBehaivor__c/fields/CoIT_Third_SchedulingPolicy_Name__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Third_SchedulingPolicy_Name__c</fullName>
    <formula>Third_SchedulingPolicy__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Third Scheduling Policy Name</label>
    <type>Text</type>
</CustomField>