force-app/main/default/objects/CoIT_WorkType_BusinessBehaivor__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipName>Work_Type_Business_Behaivors</relationshipName>
    <type>Lookup</type>
</CustomField>