force-app/main/default/objects/CoIT_WorkType_BusinessBehaivor__c/fields/Second_SchedulingPolicy__c.field-meta.xml
<CustomField>
    <fullName>Second_SchedulingPolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Scheduling Policy</label>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipName>Work_Type_Business_Behaivors1</relationshipName>
    <type>Lookup</type>
</CustomField>