force-app/main/default/objects/CoIT_WorkType_BusinessBehaivor__c/fields/ServiceTerritory__c.field-meta.xml
<CustomField>
    <fullName>ServiceTerritory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipName>Work_Type_Business_Behaivors</relationshipName>
    <type>Lookup</type>
</CustomField>