force-app/main/default/objects/CoIT_WorkType_BusinessBehaivor__c/fields/Third_SchedulingPolicy__c.field-meta.xml
<CustomField>
    <fullName>Third_SchedulingPolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Scheduling Policy</label>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipName>Work_Type_Business_Behaivors2</relationshipName>
    <type>Lookup</type>
</CustomField>