force-app/main/default/objects/CoIT_WorkType_BusinessBehaivor__c/fields/WorkType__c.field-meta.xml
<CustomField>
    <fullName>WorkType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipName>Work_Type_Business_Behaivors</relationshipName>
    <type>Lookup</type>
</CustomField>