force-app/main/default/objects/CoIT_WorkType_BusinessBehaivor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WorkType__c</columns>
    <columns>Scheduling_Type__c</columns>
    <columns>ServiceTerritory__c</columns>
    <columns>Scheduling_Model__c</columns>
    <columns>Entitlement__c</columns>
    <columns>CoIT_First_SchedulingPolicy_Name__c</columns>
    <columns>CoIT_Second_SchedulingPolicy_Name__c</columns>
    <columns>CoIT_Third_SchedulingPolicy_Name__c</columns>
    <columns>First_SchedulingPolicy__c</columns>
    <columns>CoIT_RequireRescheduled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>